tests/valid/reborrow/reborrow_shared.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    (*(&x))
}
