tests/invalid/linear_affine_error/linear_param_not_consumed.facet
fn f(x: linear isize) -> unrestricted () {
  ()
}
